--- a/demo/index.html
+++ b/demo/index.html
@@ -11,7 +11,7 @@
     <link rel="import" href="../../iron-demo-helpers/demo-pages-shared-styles.html">
     <link rel="import" href="../../iron-demo-helpers/demo-snippet.html">
     <link rel="import" href="../klima-dashboard.html">
-    <link rel="import" href="../../klima-dashboard-tile/klima-dashboard-tile.html">
+    <link rel="import" href="../klima-dashboard-tile.html">
 
     <style is="custom-style" include="demo-pages-shared-styles">
     </style>
@@ -22,11 +22,13 @@
       <demo-snippet>
         <template>
           <klima-dashboard>
-            <klima-dashboard-tile row="1"></klima-dashboard-tile>
-            <klima-dashboard-tile row="1"></klima-dashboard-tile>
-            <klima-dashboard-tile row="2"></klima-dashboard-tile>
-            <klima-dashboard-tile row="3"></klima-dashboard-tile>
-            <klima-dashboard-tile row="2"></klima-dashboard-tile>
+            <klima-dashboard-tile style="background-color: red;" row="1" overlap="1" width="50">A</klima-dashboard-tile>
+            <klima-dashboard-tile style="background-color: blue;" row="1" width="25">B</klima-dashboard-tile>
+            <klima-dashboard-tile style="background-color: green;" row="1" width="25">C</klima-dashboard-tile>
+            <klima-dashboard-tile style="background-color: yellow;" row="2" width="50">D</klima-dashboard-tile>
+            <klima-dashboard-tile style="background-color: orange;" row="3">E</klima-dashboard-tile>
+            <klima-dashboard-tile style="background-color: aqua;" row="3">F</klima-dashboard-tile>
+            <klima-dashboard-tile style="background-color: hotpink;" row="3">G</klima-dashboard-tile>
           </klima-dashboard>
         </template>
       </demo-snippet>
