--- a/klima-dashboard-tile.html
+++ b/klima-dashboard-tile.html
@@ -35,6 +35,10 @@ tile of klima-dashboard
         },
         leftNeighbour: {
           type: Object
+        },
+        order: {
+          type: Array,
+          value: [1]
         }
       },
     });
