--- a/klima-dashboard-tile.html
+++ b/klima-dashboard-tile.html
@@ -36,6 +36,9 @@ tile of klima-dashboard
         leftNeighbour: {
           type: Object
         },
+        rightNeighbour: {
+          type: Object
+        },
         order: {
           type: Array,
           value: [1]
