All neighbours are taken in account

--- a/klima-dashboard.html
+++ b/klima-dashboard.html
@@ -52,7 +52,6 @@ dashboard
           }
         }
         this._sortDashboardMap();
-        //this._adjustTilesWidth();
         //this._printDashboard();
         this._drawDashboard();
       },
@@ -105,31 +104,6 @@ dashboard
         }
       },
 
-      _adjustTilesWidth: function() {
-        this.dashboardMap.forEach(function(v,k) {
-          console.log("ROW: " + k);
-          remainingWidth = 100;
-          remainingTiles = [];
-          v.forEach(function(tile) {
-            console.log(tile.innerText);
-            if(tile.width == 0) {
-              console.log("PUSH");
-              remainingTiles.push(tile);
-            } else {
-              console.log(tile.width);
-              remainingWidth -= tile.width;
-            }
-          });
-          // Hier
-          if(remainingWidth < 0) {
-            console.warn("Overfull row");
-          }
-          remainingTiles.forEach(function(tile) {
-            tile.width = remainingWidth/remainingTiles.length;
-          });
-        });
-      },
-
       _printDashboard: function() {
         this.dashboardMap.forEach(function(v,k) {
           v.forEach(function(node) {
@@ -152,50 +126,47 @@ dashboard
         var dashboardLeft = window.getComputedStyle(dashboard, null).getPropertyValue("left");
         var rowHeight = parseInt(dashboardHeight, 10)/this.dashboardMap.size;
         var getOffset = this.getOffset;
+        var dashboardMap = this.dashboardMap;
         this.dashboardMap.forEach(function(v,k) {
           v.forEach(function(tile) {
             if(tile.row != k) {return;}
             var leftNeighbour = tile.leftNeighbour;
             var left = 0;
 
-            //new
             if(tile.width == 0) {
-              var rightNeighbour = tile.rightNeighbour;
-              var remainingTiles = 1;
-              var reservedWidth = 0;
-              while (rightNeighbour != null && !rightNeighbour.tiledrawn) {
-                console.log(tile.innerText + ": " + rightNeighbour.innerText);
-                if(rightNeighbour.width == 0) {
-                  remainingTiles += 1;
-                } else {
-                  reservedWidth += rightNeighbour.width/100*parseFloat(dashboardWidth, 10);
+              var minWidth = Infinity;
+              for(var i=0; i <= tile.overlap; i++) {
+                var row = dashboardMap.get(tile.row + i);
+                var rightNeighbour = row[tile.order[i]];
+                var remainingTiles = 1;
+                var reservedWidth = 0;
+                while (rightNeighbour != null && !rightNeighbour.tiledrawn) {
+                  if(rightNeighbour.width == 0) {
+                    remainingTiles += 1;
+                  } else {
+                    reservedWidth += rightNeighbour.width/100*parseFloat(dashboardWidth, 10);
+                  }
+                  rightNeighbour = rightNeighbour.rightNeighbour;
                 }
-                rightNeighbour = rightNeighbour.rightNeighbour;
+                var end = 0;
+                var start = 0;
+                if(tile.leftNeighbour == null) {
+                  start = 0;
+                } else {
+                  start = parseFloat(tile.leftNeighbour.style.left, 10) + parseFloat(tile.leftNeighbour.style.width, 10);
+                }
+                if(rightNeighbour == null) {
+                  end = parseFloat(dashboardLeft, 10) + parseFloat(dashboardWidth, 10);
+                } else {
+                  end = parseFloat(rightNeighbour.style.left, 10)
+                }
+                var remainingWidth = end - start - reservedWidth;
+                var width = remainingWidth/remainingTiles;
+                if(width < minWidth) {
+                  minWidth = width;
+                }
               }
-              var end = 0;
-              var start = 0;
-              if(tile.leftNeighbour == null) {
-                start = 0;
-              } else {
-                console.log("LEFT: " + parseFloat(tile.leftNeighbour.style.left, 10));
-                start = parseFloat(tile.leftNeighbour.style.left, 10) + parseFloat(tile.leftNeighbour.style.width, 10);
-              }
-              if(rightNeighbour == null) {
-                end = parseFloat(dashboardLeft, 10) + parseFloat(dashboardWidth, 10);
-                console.log("END 700???");
-              } else {
-                end = parseFloat(rightNeighbour.style.left, 10)
-              }
-              console.log("START: " + start + " END: " + end + " reservedWidth: " + reservedWidth);
-              var remainingWidth = end - start - reservedWidth;
-              var width = remainingWidth/remainingTiles;
-              if(width < 0) {
-                tile.style.width = '0px'
-              } else {
-                console.log(width);
-                tile.style.width = width + 'px';
-              }
-            //
+              tile.style.width = minWidth + 'px';
             } else {
                tile.style.width = (tile.width/100*parseFloat(dashboardWidth, 10)) + 'px';
             }
